--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,16 @@ header {
 
 /* Featured flowers styles  */
 .featured-flowers {
-    margin: 0 135px;
+    margin: 135px 135px;
+}
+
+.featured-brief {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    max-width: 594px;
+    margin: auto;
+    padding: 0 0 65px 0;
+    text-align: center;
 }
 
 .featured-flowers-gallery {
@@ -81,14 +90,24 @@ header {
 .featured-flower {
     display: flex;
     justify-content: center;
-    align-items: center;
-
-    height: 538px;
+    align-items: flex-end;
+    height: 450px;
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
 }
 
+.featured-flower img {
+    width: 300px;
+    height: 378px;
+}
 
+.featured-flower-item p {
+    color: #272727;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration-line: underline;
+}
 
 /* Hot deal related styles */
 .hot-deal {
